<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/sunday"
    style="@style/WeekTheme"/>
    <TextView
        android:text="@string/monday"
        style="@style/WeekTheme"
        />
    <TextView
        android:text="@string/tuesday"
        style="@style/WeekTheme"
        />
    <TextView
        android:text="@string/wednesday"
        style="@style/WeekTheme"
       />
    <TextView
        android:text="@string/thursday"
        style="@style/WeekTheme"
        />
    <TextView
        android:text="@string/friday"
        style="@style/WeekTheme"
        />
    <TextView
        android:text="@string/saturday"
        style="@style/WeekTheme"
        />

</LinearLayout>